# debtx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/scan/: action.yml
debtx/: __init__.py  cli.py  display.py  ignore.py  models.py  scanner.py  scoring.py
debtx/detectors/: __init__.py  _text.py  dead_code.py  deep_nesting.py  duplicated_blocks.py  empty_catches.py  giant_functions.py  hardcoded_values.py  inconsistent_naming.py  massive_files.py  missing_error_handling.py  no_test_coverage.py  orphaned_imports.py  todo_comments.py
debtx/formatters/: __init__.py  badge.py  json_fmt.py  markdown.py
debtx/languages/: __init__.py  python_lang.py  typescript_lang.py
tests/: test_cli.py  test_ignore.py  test_models.py  test_scanner.py  test_scoring.py
tests/detectors/: test_empty_catches.py  test_false_positives.py  test_giant_functions.py
